--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -49,7 +49,7 @@ div.editor
         margin: 1em 0 0 0
         text-align: right
 
-        button
+        button, a
             width: 100px
             margin-left 1em
 
