--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -7,6 +7,18 @@ body, body *
     font-family: Georgia, Serif
     font-size: 1em
 
+pre, code
+    background-color: rgb(220, 220, 220)
+    padding: 0.1em 1em
+
+pre
+    padding: 1em
+    white-space: pre
+
+pre, pre *, code, code *
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace
+
+
 div.app
     width: 90%
     margin: 1em auto 
@@ -18,17 +30,25 @@ article
     margin: 0 auto 2em auto
     padding: 0 0 2em 0
     border-bottom: solid 1px silver
-    h2
+
+    div.title
+        clear: both
         display: inline-block
-        margin: 0 0 1ex 0
-        font-size: 200%
-    a.edit
-        padding-left: 1em
-        font-size: 60%
-        &:before
-            content: '['
-        &:after
-            content: ']'
+
+        h2
+            display: inline-block
+            margin: 0 0 1ex 0
+            font-size: 200%
+            float: left
+
+        a.edit
+            padding-left: 1em
+            font-size: 60%
+            &:before
+                content: '['
+            &:after
+                content: ']'
+            line-height: 5em
     section.body
         line-height: 3ex
 
@@ -38,6 +58,7 @@ div.editor
         padding: 0.2em
         margin: 0 auto 0.5em 0
         display: inline-block
+        border: solid 1px silver
     
     textarea.header
         height: 120px
