--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -14,6 +14,8 @@ pre, code
 pre
     padding: 1em
     white-space: pre
+    code
+        padding: 0
 
 pre, pre *, code, code *
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace
