rendering header of posts

--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -51,8 +51,12 @@ article
             &:after
                 content: ']'
             line-height: 5em
-    section.body
+
+    section
         line-height: 3ex
+
+        &.header
+            font-style: italic;
 
 div.editor
     input, textarea
@@ -63,7 +67,7 @@ div.editor
         border: solid 1px silver
     
     textarea.header
-        height: 120px
+        height: 80px
     
     textarea.body
         height: 240px
