updated the style for mobiles

--- a/public/components/App.styl
+++ b/public/components/App.styl
@@ -10,6 +10,7 @@ body, body *
 pre, code
     background-color: rgb(220, 220, 220)
     padding: 0.1em 1em
+    overflow: auto
 
 pre
     padding: 1em
@@ -27,6 +28,7 @@ div.app
     padding: 1em
     background-color: white
     border-radius: 1em
+    overflow: hidden
 
 article
     margin: 0 auto 2em auto
@@ -77,7 +79,7 @@ div.editor
         text-align: right
 
         button, a
-            width: 100px
+            width: 95px
             margin-left 1em
 
 button
